2005-03-23 Scott Dattalo <scott@dattalo.com>
	* src/16bit-instructions.cc: The NEGF instruction for the 18f
	family was erroneously writing the negated result to W.
	* regression/instructions_16bit/instructions_16bit.asm: added a
	regression test for the NEGF instruction.

2005-03-21 J.R. Heisey <jrheisey@sourceforge.com>
	* src/processor.cc: Copy a null string to input parameter
	Processor::get(char *cP, int len) because not value is
	associate with a Processor object. Fixes trace errors from
	pango when the symbol window is scrolled to some symbol objects.
	* src/value.cc: Copy a null string to input parameter
	String::get(char *buf, int len) when not value string is
	allocated. Fixes trace errors from pango when symbol window
	is scrolled to some symbol objects.

2005-03-18 J.R. Heisey <jrheisey@sourceforge.com>
	* cli/cmd_load.cc/h, src/cod.cc/h, cli/input.cc, cli/parse.yy:
	added error checking for opening cod, hex and stc files.
	Particularily when opened from the GUI.

2005-03-17 Scott Dattalo <scott@dattalo.com>
	* src/stimuli.cc: tweaking of I/O thresholds.

2005-03-16 Scott Dattalo <scott@dattalo.com>
	* cli/scan.ll, src/stimuli.h, src/stimuli.cc, src/symbol.cc,
	src/symbol.h: Added/enhanced methods for searching, adding, and
	removing symbols and stimuli.

2005-03-14 J.R. Heisey <jrheisey@sourceforge.com>
	* src/modules.h, modules.cc, os_dependent.cc: Elimaticated
	undesired error message on failure to load a function of a
	module.
	Simplified Module_Library() constructor to use os independent
	api call get_library_export()

2005-03-14 Scott Dattalo <scott@dattalo.com>
	* plat/win32/gpsim.def: MSVC sync.
	* modules/modules.vcproj: Use new pthread library.
	* gui/gui_register.h, gui/gui_regwin.cc: pass registerValue by
	value in getValueAsString() method.

2005-03-03 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.def: MSVC sync

2005-03-10 Scott Dattalo <scott@dattalo.com>
	* src/stimuli.cc: Added an 'X' state to getBitChar method